--- a/internal/mailer/templates/user_welcome.tmpl
+++ b/internal/mailer/templates/user_welcome.tmpl
@@ -7,6 +7,12 @@ Thanks for signing up for a Greenlight account. We're excited to have you on boa
 
 For future reference, your user ID number is {{.ID}}
 
+Please send a request to the 'PUT /v1/users/activated' endpoint with the following JSON body to activate your account:
+
+{"token": "{{.activationToken}}"}
+
+Please note that this is a one-time use token and it will expire in 3 days.
+
 Thanks,
 
 The Greenlight Team
@@ -18,15 +24,19 @@ The Greenlight Team
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
 <body>
-    <p>Hi,</p>    
+    <p>Hi,</p>
     <p>Thanks for signing up for a Greenlight account. We're excited to have you on board!</p>
     <p>For future reference, your users ID number is {{.ID}}</p>
+    <p>Please send a request to the <code>PUT /v1/users/activated</code> endpoint with the following JSON body to activate your account:</p>
+    <pre><code>{"token": "{{.activationToken}}"}</code></pre>
+    <p>Please note that this is a one-time use token and it will expire in 3 days.</p>
     <p>Thanks,</p>
     <p>The Greenlight Team</p>
 </body>
+
 </html>
 {{end}}
